<resources>
    <string name="app_name">Popcorn</string>
    <string name="refresh">Refresh</string>
    <string name="movie">Movie</string>
    <string name="search">Search</string>

    <string name="dummy_text">dummy</string>

    //Auto Refresh
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="auto_refresh_instructions">Auto refresh will retrieve all of the latest available torrents from YTS every 24 hours.</string>

    //MENU
    <string name="update_pi_address">Update Pi Address (Service)</string>
    
    <string-array name="movieSort">
        <item>Year: Newest</item>
        <item>Year: Oldest</item>
        <item>Title: A-Z</item>
        <item>Title: Z-A</item>
        <item>Rating: Highest</item>
        <item>Rating: Lowest</item>
    </string-array>
</resources>
