<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutLunoApiOption"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/updatePiService"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:contentDescription="@string/dummy_text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:src="@drawable/pi" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtLunoApi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/update_pi_address"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Switch
            android:id="@+id/switchUpdatePiAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:showText="true"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1"
             />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/horizontalDividerLunoApi"
        style="@style/CommonHorizontalDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLunoApiOption" />



</androidx.constraintlayout.widget.ConstraintLayout>